# lattice-cpp

./: README.md  build.sh  meson.build  rebuild.sh  run.sh
include/: la.hpp
src/: la.cpp  lattice.h  main.cpp  matrix.cpp  optimize.cpp  parse.cpp  search.cpp
